# Remove-Dirty-Belt

./: .gitignore  batch_remove.m  batch_remove4data1.m  batch_remove4data2.m  single_remove.m  single_remove4data1.m  single_remove4data2.m  test.m
Remove_Dirty_Belt(cpp_ver)/: CMakeLists.txt
Remove_Dirty_Belt(cpp_ver)/include/: remove_belt.h  utils.h
Remove_Dirty_Belt(cpp_ver)/src/: main.cpp  remove_belt.cpp  utils.cpp
Remove_Dirty_Belt(matlab_ver)/: batch_remove4data1.m  batch_remove4data2.m  single_remove4data1.m  single_remove4data2.m  test.m
data1/: 004805_1800x811.raw  005040_1800x800.raw  005847_1800x872.raw  005850_1800x737.raw  005860_1800x838.raw  005870_1800x877.raw  005872_1800x795.raw  005874_1800x733.raw  005877_1800x803.raw  005887_1800x849.raw  005896_1800x795.raw  005900_1800x841.raw  005907_1800x837.raw  005910_1800x850.raw  005917_1800x810.raw  005927_1800x853.raw  005929_1800x743.raw  005940_1800x840.raw  005950_1800x854.raw  005953_1800x741.raw  005963_1800x841.raw  005967_1800x846.raw  005977_1800x745.raw  005980_1800x839.raw  005984_1800x806.raw  005986_1800x740.raw  005991_1800x845.raw  006003_1800x837.raw  006006_1800x849.raw  006015_1800x834.raw  006021_1800x804.raw  006024_1800x801.raw  006030_1800x854.raw  006039_1800x843.raw  006041_1800x751.raw  006045_1800x804.raw  006048_1800x800.raw  006054_1800x859.raw  006063_1800x864.raw  006065_1800x753.raw  (+180 more)
data2/: 001961_1800x728.raw  001991_1800x746.raw  002046_1800x758.raw  002074_1800x746.raw  002099_1800x745.raw  002135_1800x744.raw  002149_1800x727.raw  002156_1800x741.raw  002208_1800x633.raw  002252_1800x539.raw  002253_1800x596.raw  002254_1800x531.raw  002255_1800x460.raw  002256_1800x548.raw  002257_1800x451.raw  002258_1800x499.raw  002259_1800x593.raw  002260_1800x491.raw  002261_1800x488.raw  002262_1800x526.raw  002263_1800x509.raw  002264_1800x534.raw  002265_1800x535.raw  002266_1800x465.raw  002267_1800x451.raw  003026_1800x621.raw  003302_1800x625.raw  003334_1800x636.raw  003409_1800x626.raw  003419_1800x617.raw  (+5 more)
(+323 files in other folders)
